(Chore) Fixes UI alignment issue on the Visit Drawer

--- a/src/visits/components/Visit/Visit.css
+++ b/src/visits/components/Visit/Visit.css
@@ -6,6 +6,7 @@
     height: 100%;
     box-shadow: 2px 0 10px 0 black;
     overflow-y: scroll;
+    text-align: center;
 }
 
 .header{
